1. Метод .of [#70623 #416583]